# PAPER-ACK-EXTRACTION

./: .gitignore  CMakeLists.txt  README.md  main.cpp
configs/: mini.config
include/: consts.hpp
lib/: CMakeLists.txt
src/: utils.cpp
utils/clustering/: cosine-clustering.cpp  levenshtein-clustering.ipynb
utils/data-retrieval/: mini-data.py  scopus-advanced.ipynb  scopus-fetch-data.py  scopus.answer  scopus.config
